Fix a typo in "Convolutional model" subtitle.

--- a/README.Rmd
+++ b/README.Rmd
@@ -219,7 +219,7 @@ print(dim(data_y[[1L]]))
 
 A CNN model was built to break the text-based CAPTCHA. A CNN model consists of two parts, one as convolutional model and the other as deep neural-network (DNN) model, joined by a flatten layer. Since there are multiple digits to predict for each CAPTCHA image, we would build the model including a common convolutional model, a common flatten layer and multiple DNN models (one for each digit).
 
-#### Convulutional model
+#### Convolutional model
 
 The convolutional model (diagram as below) was built by adding multiple modules of convolutional and max-pooling layers, optionally adding a batch-normalization layer to improve model convergence.
 
