Change modeling process from R to python.

--- a/README.Rmd
+++ b/README.Rmd
@@ -32,15 +32,15 @@ CAPTCHA is widely used to detect automated spamming on websites. In recent past,
 
 ## Introduction
 
-CAPTCHA stands for "**C**ompletely **A**utomated **P**ublic **T**uring test to tell **C**omputers and **H**umans **A**part". There are mainly two kinds of CAPTCHA systems, the text-based one and the image-based one. The text-based CAPTCHA is the earlier version that usually contains a known number of digits and letters. To escape the detection by optical character recognition (OCR), the text-based CAPTCHA images usually contains distortion, blurring and noise (such as random deletion lines). The text-based images are now being depricated, since they are known to be breakable by deep learning technology, such as convolutional neural network (CNN), as demonstrated by [a study in python](https://medium.com/@manvi./captcha-recognition-using-convolutional-neural-network-d191ef91330e). This paper will attempt this process in R.
+CAPTCHA stands for "**C**ompletely **A**utomated **P**ublic **T**uring test to tell **C**omputers and **H**umans **A**part". There are mainly two kinds of CAPTCHA systems, the text-based one and the image-based one. The text-based CAPTCHA is the earlier version that usually contains a known number of digits and letters. To escape the detection by optical character recognition (OCR), the text-based CAPTCHA images usually contains distortion, blurring and noise (such as random deletion lines). The text-based images are now being depricated, since they are known to be breakable by deep learning technology, such as convolutional neural network (CNN), as demonstrated by [a study in python](https://medium.com/@manvi./captcha-recognition-using-convolutional-neural-network-d191ef91330e). This paper will attempt this process in a mixture of R and python.
 
 ## Methods
 
 ### Data preparation
 
-To facilitate the analyses in the paper, we need to load the following packages: `tidyverse`, `magrittr`, `rlang`, `keras`, `png`, `tools`, `ggpubr`, `ggtext` and `deepviz`. Please note that the `keras` package requires a working `tensorflow` R package with python support.
+To facilitate the analyses in the paper, we need to load the following packages in R: `tidyverse`, `magrittr`, `rlang`, `reticulate`, `png`, `tools`, `ggpubr` and `ggtext`. We also need the following packages installed in python: `numpy`, `tensorflow`, `keras` and `pydot`. Furthermore, we need [graphviz](https://graphviz.gitlab.io/download/) to visualize model structure.
 
-```{r libraries, message=FALSE, warning=FALSE, results='hold'}
+```{r libraries-r, message=FALSE, warning=FALSE, results='hold'}
 # Define a function to check, install (if necessary) and load packages
 check_packages <- function(pkg_name, repo = c("cran", "github"), repo_path) {
   repo <- match.arg(repo)
@@ -64,17 +64,111 @@ check_packages <- function(pkg_name, repo = c("cran", "github"), repo_path) {
   )
 }
 
-# CRAN packages (load "keras" last to set tensorflow seed right afterwards)
+# CRAN packages
 check_packages("tidyverse", repo = "cran")
-purrr::walk(.x = c("magrittr", "rlang", "png", "tools",
-                   "ggpubr", "ggtext", "keras"),
+purrr::walk(.x = c("magrittr", "rlang", "reticulate", "png", "tools",
+                   "ggpubr", "ggtext"),
             .f = check_packages, repo = "cran")
-tensorflow::set_random_seed(599L)
 
-# Github packages
-purrr::walk2(.x = c("deepviz"),
-             .y = c("andrie/deepviz"),
-             .f = ~ check_packages(.x, repo = "github", repo_path = .y))
+# Initialize python connection with reticulate
+check_python <- function() {
+  stopifnot(reticulate::py_available(initialize = TRUE) == TRUE)
+}
+check_python()
+```
+
+```{python imports-python, message=FALSE, warning=FALSE}
+import numpy as np
+import os
+from matplotlib import pyplot as plt
+import tensorflow as tf
+# Set random seed right after importing tensorflow
+tf.random.set_seed(599)
+from tensorflow import keras
+from tensorflow.keras import layers
+import session_info
+```
+
+To visualize model structure, we need to handle this process in an independent python script, since `reticulate` does not facilitate python-generated plots that need `graphviz`.
+
+```{r visualize-model-function-r}
+# Define a function that plots model structure with python script
+#' @param py_model Python model object, usually as py$<model_name>.
+#' @param file_name Output file name for model structure plot (PNG format).
+#' @param show_shapes Logical indicating whether layer shapes are shown.
+#' @param show_layer_names Logical indicating whether layer names are shown.
+#' @param verbose Logical indicating whether detailed messages are printed.
+#' @inheritDotParams knitr::include_graphics -path
+visualize_model_rmd <- function(
+  py_model,
+  file_name,
+  show_shapes = TRUE,
+  show_layer_names = TRUE,
+  verbose = TRUE,
+  ...
+) {
+  # Process directory
+  if (dir.exists(dirname(file_name)) == FALSE) {
+    if (verbose == TRUE) {
+      message("* Creating directory: ", dirname(file_name))
+    }
+    dir.create(dirname(file_name), recursive = TRUE)
+  }
+  # Get python model variable name (format: c("$", "py", py_model_name))
+  py_model_name <- as.character(substitute(py_model)) %>%
+    dplyr::last()
+  # Save model with python command
+  py_model_file_name <- tempfile(fileext = "")
+  if (verbose == TRUE) {
+    message("* Saving model to: ", py_model_file_name)
+  }
+  reticulate::py_eval(
+    paste0(
+      py_model_name,
+      ".save(\"",
+      py_model_file_name %>%
+        stringr::str_replace_all("\\\\", "/"),
+      "\")"
+    )
+  )
+  # Write a python script for model visualization
+  py_file_name <- tempfile(fileext = ".py")
+  if (verbose == TRUE) {
+    message("* Writing python script to: ", py_file_name)
+  }
+  py_command <- paste(
+    "import numpy as np",
+    "import os",
+    "from tensorflow import keras",
+    paste0("os.chdir('", getwd(), "')"),
+    paste0("model = keras.models.load_model(r'", py_model_file_name, "')"),
+    "keras.utils.plot_model(",
+    "  model = model,",
+    paste0("  to_file = '", file_name, "',"),
+    paste0("  show_shapes = ", stringr::str_to_sentence(show_shapes), ","),
+    paste0("  show_layer_names = ", stringr::str_to_sentence(show_layer_names)),
+    ")",
+    "",
+    sep = "\n"
+  )
+  py_file <- file(py_file_name, open = "w")
+  write(py_command, py_file)
+  close(py_file)
+  # Execute the python file
+  if (verbose == TRUE) {
+    message("* Executing python script...")
+  }
+  invisible(system(paste0("python ", py_file_name)))
+  # Clean up
+  if (unlink(py_model_file_name, recursive = TRUE) == 0 && verbose == TRUE) {
+    message("* Cleaned up model file: ", py_model_file_name)
+  }
+  if (unlink(py_file_name) == 0 && verbose == TRUE) {
+    message("* Cleaned up script file: ", py_file_name)
+  }
+  # Include the graphics
+  knitr::include_graphics(file_name, ...)
+}
 ```
 
 Image data from a [<%= digit %>-digit text-based CAPTCHA dataset](https://www.kaggle.com/fournierp/captcha-version-2-images) were first loaded with the `samples` folder unzipped and placed under the current working directory. A total of `r list.files("samples", pattern = "\\.png", recursive = FALSE) %>% length()` png images were turned into grayscale and put into a three-dimensional array where the first one as samples, the second one as pixel rows and the third as pixel columns.
@@ -94,7 +188,7 @@ data_x <- file_names %>%
                `[`(, , 1L:3L, drop = FALSE) %>%
                # Turn the image into grayscale
                apply(MARGIN = 1L:2L, mean, na.rm = TRUE) %>%
-               keras::array_reshape(dim = c(dim(.), 1L))) %>%
+               reticulate::array_reshape(dim = c(dim(.), 1L))) %>%
   # Turn list into array
   purrr::reduce2(.y = 1L:length(.), 
                  .f = function(array., matrix., idx) {
@@ -190,6 +284,21 @@ digit <- 5L
 # Define a dictionary of digits and letters present in CAPTCHA
 class_level <- c(0L:9L, letters)
 
+# Define a helper function for one-hot encoding
+to_categorical <- function(idx, class_level) {
+  stopifnot(all(idx <= length(class_level)))
+  idx %>%
+    purrr::map_dfr(~ {
+      one_hot <- rep(0L, length(class_level))
+      one_hot[.x] <- 1L
+      one_hot %>%
+        set_names(class_level) %>%
+        as.list() %>%
+        tibble::as_tibble()
+    }) %>%
+    `rownames<-`(names(idx)) %>%
+    as.matrix()
+}
 # Define a function to convert character vector to categorical matrix list
 labels2matrices <- function(labels, class_level) {
   labels %>%
@@ -200,8 +309,7 @@ labels2matrices <- function(labels, class_level) {
     purrr::map(~ {
       factor(.x, levels = class_level) %>%
         as.numeric() %>%
-        `-`(1L) %>%
-        keras::to_categorical(num_classes = length(class_level))
+        to_categorical(class_level)
     })
 }
 
@@ -219,143 +327,192 @@ print(dim(data_y[[1L]]))
 
 A CNN model was built to break the text-based CAPTCHA. A CNN model consists of two parts, one as convolutional model and the other as deep neural-network (DNN) model, joined by a flatten layer. Since there are multiple digits to predict for each CAPTCHA image, we would build the model including a common convolutional model, a common flatten layer and multiple DNN models (one for each digit).
 
+```{r conn-r-py}
+# Define a helper function to transfer variables from r to python
+#' @param ... Names of objects to ship to python
+r2python <- function(...) {
+  check_python()
+  var_names <- rlang::enexprs(...) %>%
+    as.character()
+  purrr::walk2(
+    .x = list(...),
+    .y = var_names,
+    .f = ~ {
+      py[[.y]] <- .x
+    }
+  )
+}
+
+# Define a helper function to transfer variables from python to r
+#' @param py Python connection created by \code{\link[reticulate]{py_config}}.
+#' @param nm Character vector as the names of python variables to ship.
+#' @param env Environment to release extracted named \code{py} elements into.
+python2r <- function(py, nm, env = rlang::caller_env()) {
+  check_python()
+  nm %>%
+    purrr::walk(~ {
+      rlang::env_poke(env, nm = .x, value = py[[.x]])
+    })
+}
+```
+
+```{r r2py-01}
+# Wrap up variables and transfer them to python
+r2python(digit, class_level, data_x)
+```
+
 #### Convolutional model
 
 The convolutional model (diagram as below) was built by adding multiple modules of convolutional and max-pooling layers, optionally adding a batch-normalization layer to improve model convergence.
 
-```{r build-conv-model, message=FALSE, warning=FALSE, screenshot.force=TRUE}
-# Define a function that build a module of convolutional and pooling layers
-build_unit_conv_layer <- function(input_layer,
-                                  filters,
-                                  kernel_size,
-                                  pool_size,
-                                  activation,
-                                  kernel_padding,
-                                  pool_padding,
-                                  batch_norm = FALSE,
-                                  ...) {
-  conv_layer <- input_layer %>%
-    keras::layer_conv_2d(filters = filters,
-                         kernel_size = kernel_size,
-                         activation = activation,
-                         padding = kernel_padding)
-  if (batch_norm == TRUE) {
-    conv_layer <- conv_layer %>%
-      keras::layer_batch_normalization(...)
-  }
-  conv_layer %>% # input_shape = dim(data_x)[-1L]
-    keras::layer_max_pooling_2d(pool_size = pool_size,
-                                padding = pool_padding)
-}
-
+```{python build-conv-model, message=FALSE, warning=FALSE}
 # Define the convolutional model
-input_layer <- keras::layer_input(shape = dim(data_x)[-1L])
-conv_model <- keras::keras_model(
-  inputs = input_layer,
-  outputs = tibble::tribble(
-    ~filters, ~kernel_size, ~pool_size, ~activation, ~kernel_padding,
-    ~pool_padding, ~batch_norm,
-    16L, c(3L, 3L), c(2L, 2L), "relu", "same", "same", FALSE,
-    32L, c(3L, 3L), c(2L, 2L), "relu", "same", "same", FALSE,
-    32L, c(3L, 3L), c(2L, 2L), "relu", "same", "same", TRUE
-  ) %>%
-    purrr::pmap(function(...) list(...)) %>%
-    purrr::reduce(.f = ~ {
-      rlang::inject(build_unit_conv_layer(.x, !!!.y))
-    },
-    .init = input_layer)
-)
-deepviz::plot_model(conv_model)
+input_layer = keras.Input(shape = np.shape(data_x)[1:])
+conv_layer = layers.Conv2D(
+  filters = 16,
+  kernel_size = (3, 3),
+  padding = "same",
+  activation = "relu"
+)(input_layer)
+conv_layer = layers.MaxPooling2D(
+  pool_size = (2, 2),
+  padding = "same"
+)(conv_layer)
+conv_layer = layers.Conv2D(
+  filters = 32,
+  kernel_size = (3, 3),
+  padding = "same",
+  activation = "relu"
+)(conv_layer)
+conv_layer = layers.MaxPooling2D(
+  pool_size = (2, 2),
+  padding = "same"
+)(conv_layer)
+conv_layer = layers.Conv2D(
+  filters = 32,
+  kernel_size = (3, 3),
+  padding = "same",
+  activation = "relu"
+)(conv_layer)
+conv_layer = layers.BatchNormalization()(conv_layer)
+conv_layer = layers.MaxPooling2D(
+  pool_size = (2, 2),
+  padding = "same"
+)(conv_layer)
+conv_model = keras.Model(inputs = input_layer, outputs = conv_layer)
 # Define a flatten layer
-conv_layer_flatten <- conv_model(input_layer) %>%
-  keras::layer_flatten()
+conv_layer_flatten = layers.Flatten()(conv_layer)
+```
+
+```{r warning=FALSE, out.width='25%', fig.align='center'}
+visualize_model_rmd(
+  py_model = py$conv_model,
+  file_name = "model_plot/conv_model.png",
+  show_shapes = TRUE,
+  show_layer_names = FALSE,
+  verbose = FALSE
+)
 ```
 
 #### Deep neural network (DNN) models
 
 Each DNN model (diagram as below) was built with a hidden layer and a dropout layer, with the latter as a regularization method to prevent overfitting. The output layer of each DNN model adopted a multi-class configuration with the unit as the number of possibilities per digit and activation function as `"softmax"`. The input layer of each DNN model was copied from the shape of the output from the flatten layer.
 
-```{r build-DNN-models, screenshot.force=TRUE}
+```{python build-DNN-models}
 # Define a function that copies the shape of a layer and defines an input layer
-build_input_layer_like <- function(layer) {
-  keras::layer_input(shape = as.integer(keras::k_int_shape(layer)[-1L]))
-}
+def build_deep_layer(input_layer, class_level):
+  deep_layer = layers.Dense(64, activation = "relu")(input_layer)
+  deep_layer = layers.Dropout(0.5)(deep_layer)
+  deep_layer = layers.Dense(len(class_level), activation = "softmax")(deep_layer)
+  return deep_layer
 
-# Define a list of DNN models, one for each digit
-deep_models <- purrr::rerun(
-  .n = digit,
-  build_input_layer_like(conv_layer_flatten) %>%
-    keras::keras_model(
-      outputs = keras::layer_dense(.,
-                                   units = 64L,
-                                   activation = "relu") %>%
-        keras::layer_dropout(rate = 0.5) %>%
-        keras::layer_dense(units = length(class_level),
-                           activation = "softmax")
-    )
-)
-print(length(deep_models))
-deepviz::plot_model(deep_models[[1L]])
-# Define output layers
-output_layers <- deep_models %>%
-  purrr::map(~ {
-    .x(conv_layer_flatten)
-  })
+# Construct deep model layers (one for each digit)
+deep_layers = [
+  build_deep_layer(conv_layer_flatten, class_level) for _ in range(digit)
+]
 ```
 
 #### Assembled CNN model
 
 The convolutional model and the DNN models were assembled into a final CNN model (diagram as below) and the final CNN model was compiled for training.
 
-```{r assemble-model, screenshot.force=TRUE}
-# Assemble the final model
-model <- keras::keras_model(inputs = input_layer,
-                            outputs = output_layers %>%
-                              purrr::reduce(c))
-print(model)
-deepviz::plot_model(model)
+```{python assemble-model}
+# Construct the final model
+model = keras.Model(inputs = input_layer, outputs = deep_layers)
+model.summary()
+```
+
+```{python compile-model}
 # Compile the final model
-model %>%
-  keras::compile(optimizer = "adam",
-                 loss = "categorical_crossentropy",
-                 metrics = c("accuracy"))
+model.compile(
+  loss = "categorical_crossentropy",
+  optimizer = "adam",
+  metrics = ["accuracy"]
+)
+```
+
+```{r warning=FALSE}
+visualize_model_rmd(
+  py_model = py$model,
+  file_name = "model_plot/final_model.png",
+  show_shapes = TRUE,
+  show_layer_names = FALSE,
+  verbose = FALSE
+)
 ```
 
 ## Results
 
 ### Model training
 
-The final CNN model was trained with <%= length(train_idx) %> images with 20% of them as cross-validation dataset.
+The final CNN model was trained with <%= length(train_idx) %> images with 20% of them as cross-validation dataset. Please note that in python indices start at 0.
 
-```{r train-model, cache=TRUE, message=FALSE}
-# Define training dataset
+```{r train-model-prep}
+# Define training and testing dataset
 set.seed(999L)
 train_idx <- sample.int(dim(data_x)[1L], size = length(file_names) - 100L)
 print(length(train_idx))
+test_idx <- setdiff(seq_along(data_y_labels), train_idx)
+print(length(test_idx))
+# Adjust indices to 0-based
+train_idx_0 <- train_idx - 1L
+test_idx_0 <- test_idx - 1L
 
-# Train model
-model_history <- model %>%
-  keras::fit(x = data_x[train_idx, , , , drop = FALSE],
-             y = data_y %>%
-               purrr::map(~ {
-                 .x[train_idx, , drop = FALSE]
-               }),
-             batch_size = 32L,
-             epochs = 200L,
-             validation_split = 0.2,
-             view_metrics = FALSE)
-print(model_history)
+# Subset responses
+data_y_train <- data_y %>%
+  purrr::map(~ .x[train_idx, , drop = FALSE])
+data_y_test <- data_y %>%
+  purrr::map(~ .x[test_idx, , drop = FALSE])
+```
+
+```{r r2py-02}
+# Wrap up variables and transfer them to python
+r2python(train_idx_0, test_idx_0, data_y_train, data_y_test)
+```
+
+```{python train-model, message=FALSE, results='hide'}
+model_history = model.fit(
+  data_x[train_idx_0],
+  data_y_train,
+  batch_size = 32,
+  epochs = 200,
+  validation_split = 0.2
+)
 ```
 
 ### Convolutional features
 
 When an image (shown above) went through the convolutional model, various features were abstracted. For visualization of feature patterns, the convoluted values were linearly scaled to range [0,1] with positive coefficient and rendered in grayscale (figures as below).
 
-```{r pred-conv-features, cache=TRUE}
-conv_features <- conv_model %>%
-  predict(x = data_x)
-print(dim(conv_features))
+```{python pred-conv-features}
+conv_features = conv_model.predict(x = data_x)
+print(np.shape(conv_features))
 ```
+
+```{r py2r-01}
+python2r(py, c("conv_features"))
+```
+
 
 ```{r plot-conv-features, fig.height=4}
 # Select an image
@@ -405,7 +562,7 @@ print(dim(layout_matrix))
 # Arrange images
 data_x[image_idx, , , , drop = TRUE] %>%
   drop() %>%
-  keras::array_reshape(dim = c(dim(.), 1L)) %>%
+  reticulate::array_reshape(dim = c(dim(.), 1L)) %>%
   matrix2gg_image(
     decimal = TRUE,
     title = "Original image",
@@ -422,55 +579,111 @@ data_x[image_idx, , , , drop = TRUE] %>%
     layout_matrix = layout_matrix,
     heights = grid::unit(rep(3, nrow(layout_matrix)), "line")
   )} %>%
-  grid::grid.draw()
+  ggpubr::as_ggplot()
 ```
 
 ### Model performance
 
 Training history of the final CNN model was revealed in terms of loss and accuracy (figure as below).
 
-```{r eval-model-perf, fig.width=10}
-# Plot training history: loss and metrics
-model_history[["metrics"]] %>%
-  tibble::as_tibble() %>%
-  dplyr::select(dplyr::matches("model_[0-9]+")) %>%
-  tibble::rowid_to_column("epoch") %>%
-  tidyr::pivot_longer(cols = !c("epoch"),
-                      names_to = c("model_name", "metric"),
-                      names_sep = "(?<=[0-9])_",
-                      values_to = "value") %>%
-  dplyr::mutate(
-    metric_category = ifelse(stringr::str_starts(model_name, "val_"),
-                             "validation",
-                             "training")
-  ) %>%
-  dplyr::mutate_at("model_name", ~ stringr::str_replace(.x, "val_", "")) %>%
-  dplyr::mutate_at("metric", ~ factor(.x, levels = unique(.x))) %>%
-  split(f = .[["metric"]]) %>%
-  purrr::imap(function(plot_data, metric_name) {
-    plot_data %>%
-      ggplot2::ggplot(ggplot2::aes(x = epoch, y = value)) +
-      ggplot2::geom_line(ggplot2::aes(color = metric_category)) +
-      ggplot2::facet_wrap(facets = ggplot2::vars(model_name),
-                          nrow = 1L) +
-      ggplot2::theme_bw() +
-      ggplot2::labs(x = "Epoch",
-                    y = stringr::str_to_sentence(metric_name),
-                    color = "Category")
-  }) %>%
-  {ggpubr::ggarrange(plotlist = .,
-                     ncol = 1L,
-                     align = "hv",
-                     labels = "AUTO",
-                     legend = "right",
-                     common.legend = TRUE)}
+```{python eval-model-perf-function}
+# Define a function to plot model history metric
+def plot_model_history(history, metric = "accuracy", plot_idx = [[0], [1]], row = True, share_axis = True):
+  if row == True:
+    fig, axs = plt.subplots(1, len(plot_idx[0]), sharey = share_axis)
+    for plot_i in range(len(plot_idx[0])):
+      axs[plot_i].plot(
+        history.history[list(history.history.keys())[plot_idx[0][plot_i]]]
+      )
+      axs[plot_i].plot(
+        history.history[list(history.history.keys())[plot_idx[1][plot_i]]]
+      )
+      axs[plot_i].set_title("Model " + str(plot_i + 1))
+    fig.suptitle("Model " + metric, y = 1.00)
+    plt.figlegend(["Train", "Valid"], loc = "upper right")
+    # add a big axis, hide frame
+    fig.add_subplot(111, frameon=False)
+    # hide tick and tick label of the big axis
+    plt.tick_params(
+      labelcolor = "none",
+      top = False,
+      bottom = False,
+      left = False,
+      right = False
+    )
+    plt.xlabel("Epoch")
+    plt.ylabel(metric)
+  else:
+    fig, axs = plt.subplots(len(plot_idx[0]), 1, sharex = share_axis)
+    for plot_i in range(len(plot_idx[0])):
+      axs[plot_i].plot(
+        history.history[list(history.history.keys())[plot_idx[0][plot_i]]]
+      )
+      axs[plot_i].plot(
+        history.history[list(history.history.keys())[plot_idx[1][plot_i]]]
+      )
+      axs[plot_i].set_title("Model " + str(plot_i + 1))
+    fig.suptitle("Model " + metric, y = 1.00)
+    plt.figlegend(["Train", "Valid"], loc = "upper right")
+    # add a big axis, hide frame
+    fig.add_subplot(111, frameon=False)
+    # hide tick and tick label of the big axis
+    plt.tick_params(
+      labelcolor = 'none',
+      top = False,
+      bottom = False,
+      left = False,
+      right = False
+    )
+    plt.xlabel("Epoch")
+    plt.ylabel(metric)
+```
+
+``` {python eval-model-perf-loss, fig.width=10, fig.height=4}
+# summarize history for loss
+plot_model_history(
+  model_history,
+  metric = "loss",
+  plot_idx = [
+    list(range(1, 1 + digit)),
+    list(range(2 + 2 * digit, 2 + 3 * digit))
+  ],
+  row = True
+)
+fig = plt.gcf()
+fig.set_size_inches(w = 10, h = 4, forward = True)
+plt.show()
+```
+
+``` {python eval-model-perf-accuracy, fig.width=10, fig.height=4}
+# summarize history for accuracy
+plot_model_history(
+  model_history,
+  metric = "accuracy",
+  plot_idx = [
+   list(range(1 + digit, 1 + 2 * digit)),
+   list(range(2 + 3 * digit, 2 + 4 * digit))
+  ],
+  row = True
+)
+fig = plt.gcf()
+fig.set_size_inches(w = 10, h = 4, forward = True)
+plt.show()
 ```
 
 ### Model testing
 
 Tested with the remaining <%= length(test_idx) %> images, the final CNN model achieved an overall accuracy of <%= model_accuracy * 100 %>%. 
 
-```{r test-model, cache=TRUE}
+```{python predict-model}
+model_pred = model.predict(x = data_x[test_idx_0])
+```
+
+```{r py2r-02}
+python2r(py, "model_pred")
+```
+
+```{r test-model}
 # Define a function to convert categorical matrix list to character vector
 matrices2labels <- function(matrices, class_level) {
   matrices %>%
@@ -482,18 +695,13 @@ matrices2labels <- function(matrices, class_level) {
     purrr::pmap_chr(paste0)
 }
 
-# Define testing dataset
-test_idx <- setdiff(seq_along(file_names), train_idx)
-print(length(test_idx))
-
 # Derive predictions and convert them to labels
-model_pred <- model %>%
-  predict(x = data_x[test_idx, , , , drop = FALSE]) %>%
+model_pred_labels <- model_pred %>%
   matrices2labels(class_level = class_level)
 
 # Derive overall accuracy
 model_accuracy <- purrr::map2_lgl(
-  .x = model_pred,
+  .x = model_pred_labels,
   .y = data_y_labels[test_idx],
   .f = identical
 ) %>%
@@ -503,7 +711,7 @@ print(model_accuracy)
 
 Below were the prediction results of some example images from the testing dataset.
 
-```{r test-model-examples, cache=TRUE, fig.height=3}
+```{r test-model-examples, fig.height=3}
 # Define a function to plot images and print the truth and the prediction
 display_pred_example <- function(data, pred, truth, index) {
   # Decide whether the prediction is correct
@@ -530,16 +738,20 @@ display_pred_example <- function(data, pred, truth, index) {
 }
 
 # Display some prediction results
-model_truth <- data_y_labels[test_idx]
-model_correct_lgl <- purrr::map2(model_pred, model_truth, identical)
+model_truth_labels <- data_y_labels[test_idx]
+model_correct_lgl <- purrr::map2(
+  .x = model_pred_labels,
+  .y = model_truth_labels,
+  .f = identical
+)
 purrr::map(seq(2L, 97L, by = 5L), ~ {
   display_pred_example(data = data_x[test_idx, , , , drop = FALSE],
-                       pred = model_pred,
-                       truth = model_truth,
+                       pred = model_pred_labels,
+                       truth = model_truth_labels,
                        index = .x)
 }) %>%
   {gridExtra::arrangeGrob(grobs = ., ncol = 5L)} %>%
-  grid::grid.draw()
+  ggpubr::as_ggplot()
 ```
 
 ## Discussion
@@ -548,7 +760,7 @@ In this paper, we presented a CNN in R that predicts text-based CAPTCHA images a
 
 Over the success of predicting `r digit`-digit text-based CAPTCHA, there are still some food for thought. For example, will the performance of the final model improve if we unify the DNN models to enable crosstalks among weight vectors for different digits? Technically, one can use the following model as a unified DNN model and reshape `data_y` from a list to an array. At first thought, more information (resulting in more trainable parameters when printed) is sure to bring up improvements, but is it really the case (in terms of validation and testing dataset)? And why?
 
-```{r build-DNN-model-union, eval=FALSE}
+```{r data-y-union}
 # Reshape the responses to an array for the output of unified model
 data_y_union <- purrr::reduce(
   .x = 1:length(data_y),
@@ -560,18 +772,36 @@ data_y_union <- purrr::reduce(
                   purrr::prepend(length(data_y), 2L))
 )
 
+# Send data_y_union to python
+r2python(data_y_union)
+```
+
+```{python build-DNN-model-union}
+# Define a unified DNN layer
+deep_layer_union = layers.Dense(
+  units = 64 * digit,
+  activation = "relu"
+)(conv_layer_flatten)
+deep_layer_union = layers.Dropout(0.5)(deep_layer_union)
+deep_layer_union = layers.Dense(
+  units = len(class_level) * digit,
+  activation = "linear"
+)(deep_layer_union)
+deep_layer_union = layers.Reshape(np.shape(data_y_union)[1:])(deep_layer_union)
+deep_layer_union = layers.Softmax()(deep_layer_union)
+
 # Define a unified DNN model
-deep_model_union <- build_input_layer_like(conv_layer_flatten) %>%
-    keras::keras_model(
-      outputs = keras::layer_dense(.,
-                                   units = 64L * digit,
-                                   activation = "relu") %>%
-        keras::layer_dropout(rate = 0.5) %>%
-        keras::layer_dense(units = length(class_level) * digit,
-                           activation = NULL) %>%
-        keras::layer_reshape(target_shape = dim(data_y_union)[-1L]) %>%
-        keras::layer_activation(activation = "softmax")
-    )
+model_union = keras.Model(inputs = input_layer, outputs = deep_layer_union)
+```
+
+```{r warning=FALSE, out.width='25%', fig.align='center'}
+visualize_model_rmd(
+  py_model = py$model_union,
+  file_name = "model_plot/final_model_union.png",
+  show_shapes = TRUE,
+  show_layer_names = FALSE,
+  verbose = FALSE
+)
 ```
 
 Another more challenging exploration is to break text-based CAPTCHA images without knowing the accurate number of digits. To limit the complexity of this problem, can we attempt at solving text-based images with a mixture of 1~`r digit` digits and/or small letters? Then, how can we first decide the number of digits in the CAPTCHA image?
@@ -584,6 +814,10 @@ In this paper, a CNN model was built in R to break `r digit`-digit text-based CA
 
 This file was compiled with the following packages and versions:
 
-```{r session-info}
+```{r session-info-r}
 utils::sessionInfo()
+```
+
+```{python session-info-py}
+session_info.show()
 ```
